Prevent options panel UIs from overflowing

--- a/components/VisualiserLayersControl.module.css
+++ b/components/VisualiserLayersControl.module.css
@@ -70,6 +70,6 @@
 @media only screen and  (max-width: 600px) {
     .optionsContainer {
       width: 100vw !important;
-      height: 80vw !important;
+      height: 80vh !important;
     }
    }
